--- a/android_projs/HelloWorldAndroid/res/values/strings.xml
+++ b/android_projs/HelloWorldAndroid/res/values/strings.xml
@@ -7,7 +7,8 @@
     <string name="action_settings">Settings</string>
     <string name="jimbo_hello"> hello jimmy, here is am!!!</string>
 
-    <color name="opaque_red">#f00</color> <!-- adding color constant. -->
+    <color name="opaque_red">#f00</color>
+    <!-- adding color constant. -->
 
 
     <!-- adding for button to start and stop service. -->
@@ -27,8 +28,20 @@
     <string name="frag_demo">Start Fragment Demo</string>
     <string name="title_activity_sample_fragment">SampleFragmentActivity</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    
     <string name="landscape_message">This is Landscape mode fragment</string>
-	<string name="portrait_message">This is Portrait mode fragment</string>
+    <string name="portrait_message">This is Portrait mode fragment</string>
+
+    <!-- intent demos area. -->
+    <string name="intent_demos">Intent Demos</string>
+    <string name="title_activity_intent_demo">IntentDemoActivity</string>
+    <string name="start_browser">Start Browser</string>
+    <string name="start_phone">Start Phone</string>
+    <string name="title_activity_custom_intent_filter">CustomIntentFilterActivity</string>
+    
+    <!-- this is for the intent filter demo. -->
+    <string name="start_browser_a">Start Browser with VIEW action</string>
+	 <string name="start_browser_b">Start Browser with LAUNCH action</string>
+	 <string name="start_browser_c">Exception Condition</string>
+	 
 
 </resources>
