updated files for new ui layouts demo.

--- a/android_projs/HelloWorldAndroid/res/values/strings.xml
+++ b/android_projs/HelloWorldAndroid/res/values/strings.xml
@@ -37,11 +37,16 @@
     <string name="start_browser">Start Browser</string>
     <string name="start_phone">Start Phone</string>
     <string name="title_activity_custom_intent_filter">CustomIntentFilterActivity</string>
-    
+
     <!-- this is for the intent filter demo. -->
     <string name="start_browser_a">Start Browser with VIEW action</string>
-	 <string name="start_browser_b">Start Browser with LAUNCH action</string>
-	 <string name="start_browser_c">Exception Condition</string>
-	 
+    <string name="start_browser_b">Start Browser with LAUNCH action</string>
+    <string name="start_browser_c">Exception Condition</string>
+    
+    <!-- this is for the UI layout examples. -->
+    <string name="title_activity_user_iface_layout">UserIfaceLayoutActivity</string>
+    <string name="start_service_UI_Sample">start_service_UI_Sample</string>
+    <string name="stop_service_UI_Sample">stop_service_UI_Sample</string>
+    <string name="UI_Sample_Demo_Activity">UISampleDemoActivity</string>
 
 </resources>
