added and updated files to suppor the ui layout demos

--- a/android_projs/HelloWorldAndroid/res/values/strings.xml
+++ b/android_projs/HelloWorldAndroid/res/values/strings.xml
@@ -48,5 +48,7 @@
     <string name="start_service_UI_Sample">start_service_UI_Sample</string>
     <string name="stop_service_UI_Sample">stop_service_UI_Sample</string>
     <string name="UI_Sample_Demo_Activity">UISampleDemoActivity</string>
+    <string name="reminder">Enter your name</string>
+    <string name="done">Done</string>
 
 </resources>
