updated and added files to support custom views and custom attrib for demo code

--- a/android_projs/HelloWorldAndroid/res/values/strings.xml
+++ b/android_projs/HelloWorldAndroid/res/values/strings.xml
@@ -59,5 +59,8 @@
     <!-- used for event handler chapter -->
     <string name="button_small">Small Font</string>
 	<string name="button_large">Large Font</string>
+	
+	<!-- custom component demo -->	
+	<string name="custom_component_demo">Jimmy custom component</string>
 
 </resources>
