added code for drag and drop feature for demo.

--- a/android_projs/AdvandedAndroidProj/res/values/strings.xml
+++ b/android_projs/AdvandedAndroidProj/res/values/strings.xml
@@ -8,5 +8,7 @@
     <!-- here the demo starts.. -->
     <string name="button_name">button1</string>
     
+    <!-- drag and drop demo. -->
+    <string name="drag_drop">Click on the image to drag and drop</string>
 
 </resources>
