added new code and updated code for notification demo. removed library that is not needed.

--- a/android_projs/AdvandedAndroidProj/res/values/strings.xml
+++ b/android_projs/AdvandedAndroidProj/res/values/strings.xml
@@ -4,11 +4,17 @@
     <string name="app_name">AdvandedAndroidProj</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    
+
     <!-- here the demo starts.. -->
     <string name="button_name">button1</string>
-    
+
     <!-- drag and drop demo. -->
     <string name="drag_drop">Click on the image to drag and drop</string>
+    
+    <!-- notification view demo -->
+    <string name="title_activity_notification_view">NotificationViewActivity</string>
+    <string name="start_note">Start Notification</string>
+	 <string name="cancel_note">Cancel Notification</string>
+	 <string name="update_note">Update Notification</string>
 
 </resources>
