added and updated files to support google play location based svcs.

--- a/android_projs/AdvandedAndroidProj/res/values/strings.xml
+++ b/android_projs/AdvandedAndroidProj/res/values/strings.xml
@@ -10,11 +10,17 @@
 
     <!-- drag and drop demo. -->
     <string name="drag_drop">Click on the image to drag and drop</string>
-    
+
     <!-- notification view demo -->
     <string name="title_activity_notification_view">NotificationViewActivity</string>
     <string name="start_note">Start Notification</string>
-	 <string name="cancel_note">Cancel Notification</string>
-	 <string name="update_note">Update Notification</string>
+    <string name="cancel_note">Cancel Notification</string>
+    <string name="update_note">Update Notification</string>
+    <string name="title_activity_location_based_demo">LocationBasedDemoActivity</string>
+    
+    <!-- location based svcs -->
+    <string name="get_location">Get Location</string>
+	 <string name="disconnect">Disconnect Service</string>
+	 <string name="connect">Connect Service</string>
 
 </resources>
