added code for email demo..and updated xml files for ui display.

--- a/android_projs/AdvandedAndroidProj/res/values/strings.xml
+++ b/android_projs/AdvandedAndroidProj/res/values/strings.xml
@@ -22,5 +22,8 @@
     <string name="get_location">Get Location</string>
 	 <string name="disconnect">Disconnect Service</string>
 	 <string name="connect">Connect Service</string>
+	 
+	 <!-- email based demo -->
+	<string name="send_email">Send email</string>
 
 </resources>
