added new activity to handle mutlimedia from android.

--- a/android_studio_proj/MyAppAndroid2/app/src/main/res/values/strings.xml
+++ b/android_studio_proj/MyAppAndroid2/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_main_activity3">MainActivity3Activity</string>
     <string name="title_activity_main_activity32">MainActivity32Activity</string>
+    <string name="title_activity_main_activity33">MainActivity33Activity</string>
 
 </resources>
