--- a/android_studio_proj/MyFirstAndroidApp/app/src/main/res/values/strings.xml
+++ b/android_studio_proj/MyFirstAndroidApp/app/src/main/res/values/strings.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">MyFirstAndroidApp</string>
+    <string name="app_name">MyAppAndroid2</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_reconfig"> title reconfig</string>
+    <string name="title_activity_main_activity2">MainActivity2</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_finch_lifecycle">FinchLifecycle</string>
-    <string name="title_activity_list_and_content">ListAndContentActivity</string>
+    <string name="title_activity_main_activity3">MainActivity3Activity</string>
+    <string name="title_activity_main_activity32">MainActivity32Activity</string>
 
 </resources>
