--- a/android_studio_proj/MyWeatherApp/app/src/main/res/values/strings.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_weather_station_display">WeatherStationDisplayActivity</string>
+    <string name="title_activity_daily_weather_forecast">DailyWeatherForecastActivity</string>
 </resources>
