--- a/android_studio_proj/MyWeatherApp/app/src/main/res/values/strings.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_weather_station_display">WeatherStationDisplayActivity</string>
     <string name="title_activity_daily_weather_forecast">DailyWeatherForecastActivity</string>
+    <string name="title_activity_hourly_weather">HourlyWeatherActivity</string>
 </resources>
