--- a/android_studio_proj/MyWeatherApp/app/src/main/res/values/strings.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="title_activity_weather_station_display">WeatherStationDisplayActivity</string>
     <string name="title_activity_daily_weather_forecast">DailyWeatherForecastActivity</string>
     <string name="title_activity_hourly_weather">HourlyWeatherActivity</string>
+    <!--add mob testing ad id. -->
+    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
 </resources>
