--- a/android_studio_proj/MyWeatherApp/app/src/main/res/values/strings.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyWeatherApp</string>
+    <string name="app_name">WeatherApp</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
