added new activity for google maps setup.

--- a/android_studio_proj/MyWeatherApp/app/src/main/res/values/strings.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="title_activity_hourly_weather">HourlyWeatherActivity</string>
     <!--add mob testing ad id. -->
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="title_activity_weather_station_maps">Map</string>
 </resources>
