--- a/android_studio_proj/MyWeatherApp/app/src/main/res/values/strings.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">JmTech\nWeatherApp</string>
 
-    <string name="hello_world">Hello world!</string>
+    <!--section for action bar strings menu items displays. -->
     <string name="action_settings">Settings</string>
+    <string name="map_weather_stations">MapWeatherStations</string>
+
+    <string name="hello_world">Hello world!</string>
     <string name="title_activity_current_weather">CurrentWeatherActivity</string>
     <string name="title_activity_city_search">CitySearchActivity</string>
 
