added new activity to support the graphing feature for hourly. updated gradle file to use graphing view api. added action bar menu item to show the on the hourly activity to launch the graphing activity.

--- a/android_studio_proj/MyWeatherApp/app/src/main/res/values/strings.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!--section for action bar strings menu items displays. -->
     <string name="action_settings">Settings</string>
     <string name="map_weather_stations">MapWeatherStations</string>
+    <string name="graph_hourly">GraphHourly</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_current_weather">CurrentWeatherActivity</string>
