--- a/android_studio_proj/MyWeatherApp/app/src/main/res/values/strings.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/values/strings.xml
@@ -10,11 +10,11 @@
     <string name="title_activity_current_weather">CurrentWeatherActivity</string>
     <string name="title_activity_city_search">CitySearchActivity</string>
 
-<!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_weather_station_display">WeatherStationDisplayActivity</string>
     <string name="title_activity_daily_weather_forecast">DailyWeatherForecastActivity</string>
     <string name="title_activity_hourly_weather">HourlyWeatherActivity</string>
+    <string name="title_activity_hourly_graph">HourlyGraphActivity</string>
     <!--add mob testing ad id. -->
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
     <string name="title_activity_weather_station_maps">Map</string>
