added files to support unit testing for the parse server. added code for the parse server testing.

--- a/android_studio_proj/MyAppAndroid2/app/src/main/res/values/strings.xml
+++ b/android_studio_proj/MyAppAndroid2/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="title_activity_main_activity3">MainActivity3Activity</string>
     <string name="title_activity_main_activity32">MainActivity32Activity</string>
     <string name="title_activity_main_activity33">MainActivity33Activity</string>
+    <string name="title_activity_utblank">UTBlankActivity</string>
 
 </resources>
