added code for sns aws testing

--- a/android_studio_proj/MyWeatherApp/app/src/main/res/values/strings.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/values/strings.xml
@@ -23,4 +23,16 @@
     <string name="banner_ad_unit_id">ca-app-pub-4581601300882927/2125389493</string>
 
     <string name="title_activity_weather_station_maps">Map</string>
+
+
+    <!-- TODO: Enter your project number -->
+    <string name="project_number">one</string>
+    <string name="introduction">Welcome! </string>
+    <string name="clear_screen">Clear Screen</string>
+    <string name="first_launch">First Launch</string>
+    <string name="num_of_missed_messages">MissedMessageCount</string>
+    <string name="lines_of_message_count">LinesOfMessageCount</string>
+    <string name="preferences">PreferencesFile</string>
+    <string name="notification_number">1337</string>
+
 </resources>
